Add blog for landing page api
