# app/Http/Controllers/Api/BlogController.php
@@ -48,8 +48,9 @@ class BlogController extends Controller
             ->setStatusCode(Response::HTTP_OK);
     }
 
-    public function get(Blog $blog)
+    public function get(string $slug)
     {
+        $blog = Blog::where('slug', $slug)->firstOrFail();
         $blog->increment('views_count');
 
         return BlogDetailResource::make($blog)
